cosmos/steamaudio-sys/phonon/phonon.h


typedef int                 IPLint32;   
typedef float               IPLfloat32; 
typedef enum {
    IPL_STATUS_SUCCESS,         
    IPL_STATUS_FAILURE,         
    IPL_STATUS_OUTOFMEMORY,     
    IPL_STATUS_INITIALIZATION   
} IPLerror;
typedef void (IPLCALL *IPLProgressCallback)(IPLfloat32 progress, void* userData);
typedef struct {
    IPLfloat32 x;
    IPLfloat32 y;
    IPLfloat32 z;
} IPLVector3;
typedef struct {
    IPLfloat32 elements[4][4];
} IPLMatrix4x4;
typedef enum {
    IPL_SCENETYPE_DEFAULT,
    IPL_SCENETYPE_EMBREE,
    IPL_SCENETYPE_RADEONRAYS,
    IPL_SCENETYPE_CUSTOM
} IPLSceneType;
typedef struct {
    IPLint32 indices[3];
} IPLTriangle;
typedef struct {
    IPLfloat32 absorption[IPL_NUM_BANDS];
    IPLfloat32 scattering;
    IPLfloat32 transmission[IPL_NUM_BANDS];
} IPLMaterial;
typedef struct {
    IPLint32 numVertices;
    IPLint32 numTriangles;
    IPLint32 numMaterials;
    IPLVector3* vertices;
    IPLTriangle* triangles;
    IPLint32* materialIndices;
    IPLMaterial* materials;
} IPLStaticMeshSettings;
typedef struct {
    IPLScene subScene;
    IPLMatrix4x4 transform;
} IPLInstancedMeshSettings;
IPLAPI void IPLCALL iplSceneCommit(IPLScene scene);
IPLAPI IPLerror IPLCALL iplStaticMeshCreate(IPLScene scene, IPLStaticMeshSettings* settings, IPLStaticMesh* staticMesh);
IPLAPI IPLStaticMesh IPLCALL iplStaticMeshRetain(IPLStaticMesh staticMesh);
IPLAPI void IPLCALL iplStaticMeshRelease(IPLStaticMesh* staticMesh);
IPLAPI IPLerror IPLCALL iplStaticMeshLoad(IPLScene scene, IPLSerializedObject serializedObject, IPLProgressCallback progressCallback, void* progressCallbackUserData, IPLStaticMesh* staticMesh);
IPLAPI void IPLCALL iplStaticMeshSave(IPLStaticMesh staticMesh, IPLSerializedObject serializedObject);
IPLAPI void IPLCALL iplStaticMeshAdd(IPLStaticMesh staticMesh, IPLScene scene);
IPLAPI void IPLCALL iplStaticMeshRemove(IPLStaticMesh staticMesh, IPLScene scene);
IPLAPI void IPLCALL iplStaticMeshSetMaterial(IPLStaticMesh staticMesh, IPLScene scene, IPLMaterial* newMaterial, IPLint32 index);
IPLAPI IPLerror IPLCALL iplInstancedMeshCreate(IPLScene scene, IPLInstancedMeshSettings* settings, IPLInstancedMesh* instancedMesh);
IPLAPI IPLInstancedMesh IPLCALL iplInstancedMeshRetain(IPLInstancedMesh instancedMesh);
IPLAPI void IPLCALL iplInstancedMeshRelease(IPLInstancedMesh* instancedMesh);
IPLAPI void IPLCALL iplInstancedMeshAdd(IPLInstancedMesh instancedMesh, IPLScene scene);
IPLAPI void IPLCALL iplInstancedMeshRemove(IPLInstancedMesh instancedMesh, IPLScene scene);
IPLAPI void IPLCALL iplInstancedMeshUpdateTransform(IPLInstancedMesh instancedMesh, IPLScene scene, IPLMatrix4x4 transform);
typedef enum {
    IPL_SPEAKERLAYOUTTYPE_MONO,
    IPL_SPEAKERLAYOUTTYPE_STEREO,
    IPL_SPEAKERLAYOUTTYPE_QUADRAPHONIC,
    IPL_SPEAKERLAYOUTTYPE_SURROUND_5_1,
    IPL_SPEAKERLAYOUTTYPE_SURROUND_7_1,
    IPL_SPEAKERLAYOUTTYPE_CUSTOM
} IPLSpeakerLayoutType;
typedef enum {
    IPL_AMBISONICSTYPE_N3D,
    IPL_AMBISONICSTYPE_SN3D,
    IPL_AMBISONICSTYPE_FUMA,
} IPLAmbisonicsType;
typedef enum {
    IPL_AUDIOEFFECTSTATE_TAILREMAINING,
    IPL_AUDIOEFFECTSTATE_TAILCOMPLETE,
} IPLAudioEffectState;
typedef struct {
    IPLSpeakerLayoutType type;
    IPLint32 numSpeakers;
    IPLVector3* speakers;
} IPLSpeakerLayout;
typedef struct {
    IPLint32 samplingRate;
    IPLint32 frameSize;
} IPLAudioSettings;
typedef struct {
    IPLint32 numChannels;
    IPLint32 numSamples;
    IPLfloat32** data;
} IPLAudioBuffer;