cosmos/steamaudio-sys/src/bindings.rs

extern "C" {
    #[doc = " Creates a static mesh.\n\nA static mesh represents a triangle mesh that does not change after it is created. A static mesh also contains\nan array of acoustic material properties, and a mapping between each of its triangles and their acoustic material\nproperties.\n\nStatic mesh objects should be used for scene geometry that is guaranteed to never change, such as rooms,\nbuildings, or triangulated terrain. A scene may contain multiple static meshes, although typically one\nis sufficient.\n\n\\param  scene       The scene in which the static mesh should be created.\n\\param  settings    The settings to use when creating the static mesh.\n\\param  staticMesh  [out] The created static mesh.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplStaticMeshCreate(
        scene: IPLScene,
        settings: *mut IPLStaticMeshSettings,
        staticMesh: *mut IPLStaticMesh,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a static mesh.\n\n\\param  staticMesh  The static mesh to retain a reference to.\n\n\\return The additional reference to the static mesh."]
    pub fn iplStaticMeshRetain(staticMesh: IPLStaticMesh) -> IPLStaticMesh;
}
extern "C" {
    #[doc = " Releases a reference to a static mesh.\n\n\\param  staticMesh  The static mesh to release a reference to."]
    pub fn iplStaticMeshRelease(staticMesh: *mut IPLStaticMesh);
}
extern "C" {
    #[doc = " Loads a static mesh from a serialized object. Typically, the serialized object will be created from a byte array\nloaded from disk or over the network.\n\n\\param  scene                       The scene in which the static mesh should be created.\n\\param  serializedObject            The serialized object from which to load the scene.\n\\param  progressCallback            Callback that reports the percentage of this function's work that has been completed. May be \\c NULL.\n\\param  progressCallbackUserData    Pointer to arbitrary data that will be passed to the progress callback. May be \\c NULL.\n\\param  staticMesh                  [out] The created static mesh.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplStaticMeshLoad(
        scene: IPLScene,
        serializedObject: IPLSerializedObject,
        progressCallback: IPLProgressCallback,
        progressCallbackUserData: *mut ::std::os::raw::c_void,
        staticMesh: *mut IPLStaticMesh,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Saves a static mesh to a serialized object. Typically, the serialized object will then be saved to disk.\n\nThis function can only be called on a static mesh that is part of a scene created with \\c IPL_SCENETYPE_DEFAULT.\n\n\\param  staticMesh          The static mesh to save.\n\\param  serializedObject    The serialized object into which to save the static mesh."]
    pub fn iplStaticMeshSave(staticMesh: IPLStaticMesh, serializedObject: IPLSerializedObject);
}
extern "C" {
    #[doc = " Adds a static mesh to a scene.\n\nThis function should be called after \\c iplStaticMeshCreate, or at any point after \\c iplStaticMeshRemove,\nfor the static mesh to start affecting sound propagation.\n\nAfter calling this function, \\c iplSceneCommit must be called for the changes to take effect.\n\n\\param  staticMesh  The static mesh to add.\n\\param  scene       The scene to which to add the static mesh. This must be the scene which was passed when\ncalling \\c iplStaticMeshCreate."]
    pub fn iplStaticMeshAdd(staticMesh: IPLStaticMesh, scene: IPLScene);
}
extern "C" {
    #[doc = " Removes a static mesh from a scene.\n\nAfter this function is called, the static mesh will stop affecting sound propagation, until it is\nadded back using \\c iplStaticMeshAdd.\n\nAfter calling this function, \\c iplSceneCommit must be called for the changes to take effect.\n\n\\param  staticMesh  The static mesh to remove.\n\\param  scene       The scene from which to remove the static mesh. This must be the scene which was passed when\ncalling \\c iplStaticMeshCreate."]
    pub fn iplStaticMeshRemove(staticMesh: IPLStaticMesh, scene: IPLScene);
}
extern "C" {
    #[doc = " Loads the material data of specified object in the iplStaticMesh.\n\n\\param  staticMesh  The static mesh to update.\n\\param  scene       The scene from which to update the static mesh. This must be the scene which was passed when\ncalling \\c iplStaticMeshCreate.\n\\param  newMaterial  The material data of specified object.\n\\param  index  The index of specified object. It means the object's index in the order it was exported."]
    pub fn iplStaticMeshSetMaterial(
        staticMesh: IPLStaticMesh,
        scene: IPLScene,
        newMaterial: *mut IPLMaterial,
        index: IPLint32,
    );
}
extern "C" {
    #[doc = " Creates an instanced mesh.\n\nAn instanced mesh takes one scene and positions it within another scene. This is useful if you have the\nsame object, like a pillar, that you want to instantiate multiple times within the same scene. A scene\ncan be instantiated multiple times within another scene, without incurring any significant memory overhead.\n\nThe instanced mesh can be moved, rotated, and scaled freely at any time, providing an easy way to implement\ndynamic objects whose motion can be described purely in terms of rigid-body transformations.\n\n\\param  scene           The scene in which the instanced mesh should be created.\n\\param  settings        The settings used to create the instanced mesh.\n\\param  instancedMesh   [out] The created instanced mesh.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplInstancedMeshCreate(
        scene: IPLScene,
        settings: *mut IPLInstancedMeshSettings,
        instancedMesh: *mut IPLInstancedMesh,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a instanced mesh.\n\n\\param  instancedMesh   The instanced mesh to retain a reference to.\n\n\\return The additional reference to the instanced mesh."]
    pub fn iplInstancedMeshRetain(instancedMesh: IPLInstancedMesh) -> IPLInstancedMesh;
}
extern "C" {
    #[doc = " Releases a reference to a instanced mesh.\n\n\\param  instancedMesh   The instanced mesh to release a reference to."]
    pub fn iplInstancedMeshRelease(instancedMesh: *mut IPLInstancedMesh);
}
extern "C" {
    #[doc = " Adds an instanced mesh to a scene.\n\nThis function should be called after \\c iplInstancedMeshCreate, or at any point after \\c iplInstancedMeshRemove,\nfor the instanced mesh to start affecting sound propagation.\n\nAfter calling this function, \\c iplSceneCommit must be called for the changes to take effect.\n\n\\param  instancedMesh   The instanced mesh to add.\n\\param  scene           The scene to which to add the instanced mesh. This must be the scene which was passed when\ncalling \\c iplInstancedMeshCreate."]
    pub fn iplInstancedMeshAdd(instancedMesh: IPLInstancedMesh, scene: IPLScene);
}
extern "C" {
    #[doc = " Removes an instanced mesh from a scene.\n\nAfter this function is called, the instanced mesh will stop affecting sound propagation, until it is\nadded back using \\c iplInstancedMeshAdd.\n\nAfter calling this function, \\c iplSceneCommit must be called for the changes to take effect.\n\n\\param  instancedMesh   The instanced mesh to remove.\n\\param  scene           The scene from which to remove the instanced mesh. This must be the scene which was passed when\ncalling \\c iplInstancedMeshCreate."]
    pub fn iplInstancedMeshRemove(instancedMesh: IPLInstancedMesh, scene: IPLScene);
}
extern "C" {
    #[doc = " Updates the local-to-world transform of an instanced mesh within its parent scene.\n\nThis function allows the instanced mesh to be moved, rotated, and scaled dynamically.\n\nAfter calling this function, \\c iplSceneCommit must be called for the changes to take effect.\n\n\\param  instancedMesh   The instanced mesh whose transform is to be updated.\n\\param  scene           The parent scene that contains the instanced mesh.\n\\param  transform       The new 4x4 local-to-world transform matrix."]
    pub fn iplInstancedMeshUpdateTransform(
        instancedMesh: IPLInstancedMesh,
        scene: IPLScene,
        transform: IPLMatrix4x4,
    );
}
#[doc = " Mono."]
pub const IPLSpeakerLayoutType_IPL_SPEAKERLAYOUTTYPE_MONO: IPLSpeakerLayoutType = 0;
#[doc = " Stereo (left, right)."]
pub const IPLSpeakerLayoutType_IPL_SPEAKERLAYOUTTYPE_STEREO: IPLSpeakerLayoutType = 1;
#[doc = " Front left, front right, rear left, rear right."]
pub const IPLSpeakerLayoutType_IPL_SPEAKERLAYOUTTYPE_QUADRAPHONIC: IPLSpeakerLayoutType = 2;
#[doc = " Front left, front right, front center, LFE, rear left, rear right."]
pub const IPLSpeakerLayoutType_IPL_SPEAKERLAYOUTTYPE_SURROUND_5_1: IPLSpeakerLayoutType = 3;
#[doc = " Front left, front right, front center, LFE, rear left, rear right, side left, side right."]
pub const IPLSpeakerLayoutType_IPL_SPEAKERLAYOUTTYPE_SURROUND_7_1: IPLSpeakerLayoutType = 4;
#[doc = " User-defined speaker layout. See \\c IPLSpeakerLayout."]
pub const IPLSpeakerLayoutType_IPL_SPEAKERLAYOUTTYPE_CUSTOM: IPLSpeakerLayoutType = 5;
#[doc = " Supported speaker layouts."]
pub type IPLSpeakerLayoutType = ::std::os::raw::c_int;
#[doc = " ACN channel ordering, orthonormal spherical harmonics."]
pub const IPLAmbisonicsType_IPL_AMBISONICSTYPE_N3D: IPLAmbisonicsType = 0;
#[doc = " ACN channel ordering, semi-normalized spherical harmonics. AmbiX format."]
pub const IPLAmbisonicsType_IPL_AMBISONICSTYPE_SN3D: IPLAmbisonicsType = 1;
#[doc = " Furse-Malham (B-format)."]
pub const IPLAmbisonicsType_IPL_AMBISONICSTYPE_FUMA: IPLAmbisonicsType = 2;
#[doc = " Supported channel ordering and normalization schemes for Ambisonic audio."]
pub type IPLAmbisonicsType = ::std::os::raw::c_int;
#[doc = " One or more samples of tail remain in the effect's internal buffers."]
pub const IPLAudioEffectState_IPL_AUDIOEFFECTSTATE_TAILREMAINING: IPLAudioEffectState = 0;
#[doc = " No tail remains in the effect's internal buffers."]
pub const IPLAudioEffectState_IPL_AUDIOEFFECTSTATE_TAILCOMPLETE: IPLAudioEffectState = 1;
#[doc = " States that an audio effect can be left in after processing a frame of audio."]
pub type IPLAudioEffectState = ::std::os::raw::c_int;
#[doc = " Describes a standard or custom speaker layout."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLSpeakerLayout {
    #[doc = " See \\c IPLSpeakerLayoutType."]
    pub type_: IPLSpeakerLayoutType,
    #[doc = " Number of speakers. Only for IPL_SPEAKERLAYOUTTYPE_CUSTOM."]
    pub numSpeakers: IPLint32,
    #[doc = " Array of unit-length directions for each speaker. Only for IPL_SPEAKERLAYOUTTYPE_CUSTOM."]
    pub speakers: *mut IPLVector3,
}
#[doc = " Global settings for audio signal processing."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAudioSettings {
    #[doc = " Sampling rate, in Hz."]
    pub samplingRate: IPLint32,
    #[doc = " Frame size, in samples. Independent of number of channels."]
    pub frameSize: IPLint32,
}
#[doc = " Describes an audio buffer. All audio buffers passed to Steam Audio must be deinterleaved."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAudioBuffer {
    #[doc = " Number of channels."]
    pub numChannels: IPLint32,
    #[doc = " Number of samples per channel."]
    pub numSamples: IPLint32,
    #[doc = " Array of pointers to sample data for each channel. Allocation of sample data is up to the user."]
    pub data: *mut *mut IPLfloat32,
}
